<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/donate_nav_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:tint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/support"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/coffe_sticker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/appeal_title"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/appeal_text"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/appeal_notice"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/dividerVertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingBottom="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1.0"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    tools:ignore="NestedWeights">

                    <LinearLayout
                        android:id="@+id/donate_coffe_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:onClick="donate"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/coffee_2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/donate_price_1"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/espresso" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:background="@color/colorPrimaryDark"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/buy"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1.0"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:id="@+id/donate_coffee_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:onClick="donate"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/coffee_cup" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/donate_price_2"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cafe_latte" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:background="@color/colorPrimaryDark"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/buy"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1.0"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:id="@+id/donate_coffe_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:onClick="donate"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/coffee_1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/donate_price_3"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@string/cappuccino"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:background="@color/colorPrimaryDark"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/buy"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>